--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Project explains all Node JS examples",
   "main": "app.js",
   "publishConfig": {
-    "registry": "http://http://172.31.2.6:8081/repository/nodejs-deployed-page/"
+    "registry": "http://172.31.2.6:8081/repository/mwa-release-classtest/"
   },
   "scripts": {
     "server": "http-server -c-1 -p 9999",
